--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
-    <string name="app_name">MyNote</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">钱包</string>
+    <string name="action_settings">设置</string>
+    <string name="title_activity_home_page">主页</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="drawer_home">主页</string>
+    <string name="drawer_payment">收支</string>
+    <string name="drawer_wallet">账户管理</string>
+    <string name="drawer_settings">设置</string>
+    <string name="drawer_about">关于</string>
+    <string name="drawer_backup">备份</string>
+    <string name="drawer_other">其他</string>
 </resources>
