--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,11 @@
 
     <string name="drawer_home">主页</string>
     <string name="drawer_payment">收支</string>
-    <string name="drawer_wallet">账户管理</string>
+    <string name="drawer_wallet">资金管理</string>
     <string name="drawer_settings">设置</string>
     <string name="drawer_about">关于</string>
     <string name="drawer_backup">备份</string>
     <string name="drawer_other">其他</string>
+    <string name="drawer_categories">类别</string>
+    <string name="title_activity_categories">Categories</string>
 </resources>
